scripts/nullaway/wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8.txt
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeGeneration/EnumMaze.java:78: error: [NullAway] dereferenced expression randDirs is @Nullable
        for (int i = 0; i < randDirs.length; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:6: error: [NullAway] @NonNull field northNode not initialized
    private MazeNode northNode, southNode, eastNode, westNode;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:6: error: [NullAway] @NonNull field southNode not initialized
    private MazeNode northNode, southNode, eastNode, westNode;
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:6: error: [NullAway] @NonNull field eastNode not initialized
    private MazeNode northNode, southNode, eastNode, westNode;
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/MazeRoomLogic/MazeNode.java:6: error: [NullAway] @NonNull field westNode not initialized
    private MazeNode northNode, southNode, eastNode, westNode;
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/GameOverLogic/HighScoresWindow.java:19: error: [NullAway] initializer method does not guarantee @NonNull field highScores (line 34) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HighScoresWindow() {
           ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/GameOverLogic/HighScoresWindow.java:25: error: [NullAway] read of @NonNull field highScores before initialization
        textPane.setText(highScores);
                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestionFactory.java:28: error: [NullAway] dereferenced expression a is @Nullable
            a.setAnswer(rs.getString(3));
             ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestionFactory.java:30: error: [NullAway] dereferenced expression p is @Nullable
            p.setPrompt(rs.getString(2));
             ^
    (see http://t.uber.com/nullaway )
../wpi/urlcf7851e92b_Triploblastic_CSCD350_FinalProject_tgz-pJ8-MazeGame_MazeJ8/src/TriviaQuestions/MovieTriviaQuestion.java:68: error: [NullAway] dereferenced expression answerSet.getAnswer() is @Nullable
        return answerSet.getAnswer().equals(prompt.getSelection());
                                    ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
